Add tiles and industry dominance chart

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -24,7 +24,7 @@
                 <select class="form-control" id="countrySelect" onchange="handleSelectChange(this)">
                 </select>
             </div>
-            <!-- Visualization container -->
+            <!-- Visualization container row 1 -->
             <div class="row mb-2">
                 <div class="col mx-2 rounded" style="background-color: white;">
                     <!-- Billionaires by Country Chart -->
@@ -41,7 +41,8 @@
                     <div id="graph2"></div>
                 </div>
             </div>
-            <div class="row">
+            <!-- Visualization container row 2 -->
+            <div class="row mb-2">
                 <div class="col mx-2 rounded" style="background-color: white;">
                     <!-- Plotly Chart here -->
                     <p>Graph3</p>
@@ -53,6 +54,37 @@
                     <div id="graph4" style="max-height: 300px; min-height: 300px; overflow-x: auto;"></div>
                 </div>
             </div>
+            <!-- Visualization container row 3 -->
+            <div class="row mb-2">
+                <div class="col mx-2 rounded" style="background-color: white;">
+                    <!-- Plotly Chart here -->
+                    <p>Graph5</p>
+                    <div id="graph5" style="max-height: 300px; min-height: 300px; overflow-x: auto;">
+                    </div>
+                </div>
+                <div class="col mx-2 rounded" style="background-color: white;">
+                    <!-- Plotly Chart here -->
+                    <p>Graph6</p>
+                    <div id="graph6"></div>
+                </div>
+                <div class="col mx-2 rounded" style="background-color: white;">
+                    <!-- Plotly Chart here -->
+                    <p>Graph7</p>
+                    <div id="graph7"></div>
+                </div>
+            </div>
+            <!-- Visualization container row 3 -->
+            <div class="row">
+                <div class="col mx-2 rounded" style="background-color: white;">
+                    <!-- Plotly Chart here -->
+                    <p>Graph8</p>
+                    <div id="graph8" style="max-height: 300px; min-height: 300px; overflow-x: auto;"></div>
+                </div>
+                <div class="col mx-2 rounded" style="background-color: white;">
+                    <!-- Plotly Chart here -->
+                    <div id="graph9" style="max-height: 300px; min-height: 300px; overflow-x: auto;"></div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -60,6 +92,11 @@
     <script src="graph2.js"></script>
     <script src="graph3.js"></script>
     <script src="graph4.js"></script>
+    <script src="graph5.js"></script>
+    <script src="graph6.js"></script>
+    <script src="graph7.js"></script>
+    <script src="graph8.js"></script>
+    <script src="graph9.js"></script>
     <script src="billionaires_by_country.js"></script>
     <script src="dashboard.js"></script>
     <!-- Bootstrap JS for styles -->
