--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Dashboard</title>
+    <title>Billionaires Dashboard</title>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Include libraries -->
@@ -19,7 +19,7 @@
         <!-- Sample Bootstrap grid layout -->
         <div class="container mt-1 pb-1 " style="background-color: #E5F2F6;">
             <div class="row d-flex justify-content-center h2 pt-2 pb-2" style="background-color: #47859E; color:white">
-                Billionaire Dashboard
+                Billionaires Dashboard
             </div>
 
             <!-- Dropdown select input -->
