adding more space for main container

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -10,6 +10,14 @@
     <!-- Include libraries -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <style>
+            /* Custom CSS to change the container max-width */
+        @media (min-width: 1200px) {
+            .container {
+                max-width: 1500px; /* Change this value to your desired maximum width */
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Dashboard content -->
