--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -92,14 +92,14 @@
             <!-- Visualization container row 3 -->
             <div class="row mb-1">
                 
-                <div class="col mr-1 " style="background-color: white;">
+                <div class="col ml-1 " style="background-color: white;">
                     <!-- Top Billionaires Net Worth -->
                     <div id="graph6"></div>
                 </div>
                 <div class="col mx-1 " style="background-color: white;">
                     <!-- Billionaires as Family -->
-                    <canvas id="polarChart"></canvas>
-                    <div id="graph8" style="max-height: 300px; min-height: 300px; overflow-x: auto;"></div>
+                    <canvas id="polarChart" style="padding-top: 15px;"></canvas>
+                    <div id="graph8" style="max-height: 300px; min-height: 300px; overflow-x: auto; padding-top: 100px;"></div>
                 </div>
             </div>
             <!-- Visualization container row 3 -->
