--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -110,6 +110,7 @@
                 </div>
                 <div class="col ml-1 mr-1 " style="background-color: white;">
                     <!-- Billionaires by Country Chart -->
+                    <div style="text-align: center; padding-bottom: 10px; padding-top: 5px;">Source of Wealth Frequency</div>
                     <div id="billionaires-by-country-chart" style="max-height: 300px; min-height: 300px; overflow-x: auto;"></div>
                 </div>
                 <div class="col mr-1 " style="background-color: white;">
