fix pie chart count and new graphs

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -70,7 +70,7 @@
                     <div id="graph2"></div>
                     <div id="bubble"></div>
                 </div>
-                <div class="col ml-1 " style="background-color: white;">
+                <div class="col mx-1 " style="background-color: white;">
                     <!-- Plotly Chart here -->
                     <div id="graph1" style="max-height: 300px;"></div>
                     <div id="pie"></div>
