--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: #e2dfdf;">
     <!-- Dashboard content -->
     <div id="chart-container">
         
