support for Pages

--- a/index.html
+++ b/index.html
@@ -124,22 +124,22 @@
         </div>
 
     </div>
-    <script src="graph1.js"></script>
-    <script src="graph2.js"></script>
-    <script src="graph3.js"></script>
-    <script src="graph4.js"></script>
-    <script src="graph5.js"></script>
-    <script src="graph6.js"></script>
-    <script src="graph7.js"></script>
-    <script src="graph8.js"></script>
-    <script src="graph9.js"></script>
-    <script src="graph10.js"></script>
-    <script src="graph11.js"></script>
-    <script src="graph12.js"></script>
-    <script src="graph13.js"></script>
-    <script src="graph14.js"></script>
-    <script src="billionaires_by_country.js"></script>
-    <script src="dashboard.js"></script>
+    <script src="dashboard/graph1.js"></script>
+    <script src="dashboard/graph2.js"></script>
+    <script src="dashboard/graph3.js"></script>
+    <script src="dashboard/graph4.js"></script>
+    <script src="dashboard/graph5.js"></script>
+    <script src="dashboard/graph6.js"></script>
+    <script src="dashboard/graph7.js"></script>
+    <script src="dashboard/graph8.js"></script>
+    <script src="dashboard/graph9.js"></script>
+    <script src="dashboard/graph10.js"></script>
+    <script src="dashboard/graph11.js"></script>
+    <script src="dashboard/graph12.js"></script>
+    <script src="dashboard/graph13.js"></script>
+    <script src="dashboard/graph14.js"></script>
+    <script src="dashboard/billionaires_by_country.js"></script>
+    <script src="dashboard/dashboard.js"></script>
     <!-- Bootstrap JS for styles -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
